# master_graduate_project

./: .gitignore  README.md  thesis.tex  thesis.thm
cross_modal_retrieval_system/: .dockerignore  .gitignore  README.md  docker-compose.yml
cross_modal_retrieval_system/backend/: .env.example  Dockerfile  pyproject.toml
cross_modal_retrieval_system/backend/data/: category_taxonomy.db  category_taxonomy.db-shm  category_taxonomy.db-wal
cross_modal_retrieval_system/backend/scripts/: e2e_smoke.py  shuffle_jsonl.py
cross_modal_retrieval_system/backend/src/app/: main.py
cross_modal_retrieval_system/backend/src/app/api/: deps.py  router.py
cross_modal_retrieval_system/backend/src/app/api/routes/: hash_ops.py  ingest.py  retrieval.py
cross_modal_retrieval_system/backend/src/app/core/: config.py
cross_modal_retrieval_system/backend/src/app/infra/: catalog.py  category_taxonomy_repo.py  container.py  kafka_client.py  milvus_client.py
cross_modal_retrieval_system/backend/src/app/schemas/: common.py  hash_ops.py  ingest.py  retrieval.py
cross_modal_retrieval_system/backend/src/app/services/: feature_service.py  hash_service.py  ingest_service.py  mbe_listing_simulator.py  retrieval_service.py
cross_modal_retrieval_system/backend/src/data/: category_taxonomy.db
cross_modal_retrieval_system/backend/src/model/: mih.py  scph.py
cross_modal_retrieval_system/backend/src/test/api/: test_retrieval_api.py
cross_modal_retrieval_system/backend/src/test/model/: test_mih.py  test_scph.py
data/: abstract.tex  ack.tex  appendix01.tex  appendix02.tex  chap01.tex  chap02.tex  chap03_scph.tex  chap04_mih.tex  chap05_app_system.tex  chap06_conclusion.tex  committee.tex  info.tex  resume.tex  statement.tex
figures/app/: graph  (+1 more)
ref/: refs.bib
scnu-cs-thesis-master/: Makefile  makepdf.bat  scnuthesis.cfg  scnuthesis.dtx  scnuthesis.ins
(+11 files in other folders)
