[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "cross-modal-retrieval-backend"
version = "0.1.0"
description = "Backend service for cross-modal retrieval system."
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "torch",
]

[tool.uv]
package = false
