[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "cross-modal-retrieval-backend"
version = "0.1.0"
description = "Backend service for cross-modal retrieval system."
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka",
    "datasets>=4.6.1",
    "fastapi",
    "h5py>=3.15.1",
    "httpx",
    "numpy>=2.4.2",
    "pillow",
    "pydantic-settings",
    "pymilvus",
    "python-multipart",
    "scipy>=1.17.1",
    "torch",
    "torchvision",
    "transformers>=5.3.0",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.uv]
package = false
